--- a/Introduction/1.ipynb
+++ b/Introduction/1.ipynb
@@ -2,24 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Here We will be discussing the system design from the starting to the complete end .\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Introduction to the System Design and the Computer Architect.\n",
+    "   #** Four Important points from the Cafe_App Outcome..\n",
+    "    # => Optimise the output and increase the throught output by using the same resource. [#Vertical_Scale]\n",
+    "     #=> Preparing beforehand during the Peak_hours [#Preprocessing_and_Crown_Job]\n",
+    "     #=> Hire more Resources [#Horizontal_Scaling]\n",
+    "     #=> Keep the backups and avoid the single point of failure. [#Backups]\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Here We will be discussing the system design from the starting to the complete end ."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Introduction to the System Design and the Computer Architect.\n",
-    "   ** Four Important points from the Cafe_App Outcome..\n",
-    "     => Optimise the output and increase the throught output by using the same resource. [#Vertical_Scale]\n",
-    "     => Preparing beforehand during the Peak_hours [#Preprocessing_and_Crown_Job]\n",
-    "     => Hire more Resources [#Horizontal_Scaling]\n",
-    "     => Keep the backups and avoid the single point of failure. [#Backups]\n",
-    "     "
+    "# MicroServices-Heading ..\n",
+    " #=>The 5th important point of this sys des is the microservice architectures..\n",
+    " #=>6th most imp. point is the distributed systems ..\n",
+    " #=>Load Balancer..\n",
+    " #=>Decoupling the Systems and Separating out the concerns..\n",
+    " #=>Logging and Metrics Calculations..\n",
+    " "
    ]
   }
  ],
