--- a/Introduction/1.ipynb
+++ b/Introduction/1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,20 @@
     " #=>Load Balancer..\n",
     " #=>Decoupling the Systems and Separating out the concerns..\n",
     " #=>Logging and Metrics Calculations..\n",
-    " "
+    " #=>Extensible Systems ...means that can be scaled very easily ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### HIGH LEVEL DESIGNS ...\n",
+    "  #1 .Order Overload => Recruitment ..\n",
+    "  #2. Complexity => Seperations of the concerns\n",
+    "  #3. Mishaps => Fault Tolerance ..\n",
+    "   "
    ]
   }
  ],
